# newsletter_ai

./: README.md  pyproject.toml
src/: report.md
src/newsletter/: crew.py  main.py  trained_agents_data.pkl  training_data.pkl
src/newsletter/config/: agents.yaml  newsletter_template.html  tasks.yaml
src/newsletter/tools/: research_tools.py
