[tool.poetry]
name = "newsletter"
version = "0.1.0"
description = "newsletter using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.35.8" }
langchain = "0.1.17"
langchain-core = "0.1.52"
langchain-anthropic = "^0.1.11"

[tool.poetry.scripts]
newsletter = "newsletter.main:run"
train = "newsletter.main:train"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
